{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 214,
  "lineage": "4b72ceaf-3882-3949-f0d6-77656a88fbe2",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "managed_ingress_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:security-group-rule/sgr-030696a5eadedfd10",
            "cidr_ipv4": "172.16.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from CIDR blocks",
            "from_port": null,
            "id": "sgr-030696a5eadedfd10",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c1a4008955dd11ba",
            "security_group_rule_id": "sgr-030696a5eadedfd10",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_cloudwatch_log_group.default",
            "module.eks_cluster.aws_eks_cluster.default",
            "module.eks_cluster.aws_iam_policy.cluster_elb_service_role",
            "module.eks_cluster.aws_iam_role.default",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_service_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_elb_service_role",
            "module.eks_cluster.aws_kms_alias.cluster",
            "module.eks_cluster.aws_kms_key.cluster",
            "module.eks_cluster.data.aws_iam_policy_document.assume_role",
            "module.eks_cluster.data.aws_iam_policy_document.cluster_elb_service_role",
            "module.eks_cluster.data.aws_partition.current",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_network_acl_rule.private4_egress",
            "module.subnets.aws_network_acl_rule.private4_ingress",
            "module.subnets.aws_network_acl_rule.private6_egress",
            "module.subnets.aws_network_acl_rule.private6_ingress",
            "module.subnets.aws_network_acl_rule.public4_egress",
            "module.subnets.aws_network_acl_rule.public4_ingress",
            "module.subnets.aws_network_acl_rule.public6_egress",
            "module.subnets.aws_network_acl_rule.public6_ingress",
            "module.subnets.aws_route.nat4",
            "module.subnets.aws_route.nat_instance",
            "module.subnets.aws_route.private6",
            "module.subnets.aws_route.private_nat64",
            "module.subnets.aws_route.public",
            "module.subnets.aws_route.public6",
            "module.subnets.aws_route.public_nat64",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_route_table_association.private",
            "module.subnets.aws_route_table_association.public",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_security_group_rule.nat_instance_egress",
            "module.subnets.aws_security_group_rule.nat_instance_ingress",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_account",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_region",
            "module.subnets.module.utils.data.aws_regions.complete",
            "module.subnets.module.utils.data.aws_regions.default",
            "module.subnets.module.utils.data.aws_regions.not_opted_in",
            "module.subnets.module.utils.data.aws_regions.opted_in",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "managed_ingress_security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:security-group-rule/sgr-0037d0b48ad7510a5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow inbound traffic from existing Security Groups",
            "from_port": null,
            "id": "sgr-0037d0b48ad7510a5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-07005868c1bb80466",
            "security_group_id": "sg-0c1a4008955dd11ba",
            "security_group_rule_id": "sgr-0037d0b48ad7510a5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.aws_cloudwatch_log_group.default",
            "module.eks_cluster.aws_eks_cluster.default",
            "module.eks_cluster.aws_iam_policy.cluster_elb_service_role",
            "module.eks_cluster.aws_iam_role.default",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_cluster_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.amazon_eks_service_policy",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_elb_service_role",
            "module.eks_cluster.aws_kms_alias.cluster",
            "module.eks_cluster.aws_kms_key.cluster",
            "module.eks_cluster.data.aws_iam_policy_document.assume_role",
            "module.eks_cluster.data.aws_iam_policy_document.cluster_elb_service_role",
            "module.eks_cluster.data.aws_partition.current",
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_network_acl_rule.private4_egress",
            "module.subnets.aws_network_acl_rule.private4_ingress",
            "module.subnets.aws_network_acl_rule.private6_egress",
            "module.subnets.aws_network_acl_rule.private6_ingress",
            "module.subnets.aws_network_acl_rule.public4_egress",
            "module.subnets.aws_network_acl_rule.public4_ingress",
            "module.subnets.aws_network_acl_rule.public6_egress",
            "module.subnets.aws_network_acl_rule.public6_ingress",
            "module.subnets.aws_route.nat4",
            "module.subnets.aws_route.nat_instance",
            "module.subnets.aws_route.private6",
            "module.subnets.aws_route.private_nat64",
            "module.subnets.aws_route.public",
            "module.subnets.aws_route.public6",
            "module.subnets.aws_route.public_nat64",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_route_table_association.private",
            "module.subnets.aws_route_table_association.public",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_security_group_rule.nat_instance_egress",
            "module.subnets.aws_security_group_rule.nat_instance_ingress",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_account",
            "module.subnets.module.utils.data.aws_iam_policy_document.by_region",
            "module.subnets.module.utils.data.aws_regions.complete",
            "module.subnets.module.utils.data.aws_regions.default",
            "module.subnets.module.utils.data.aws_regions.not_opted_in",
            "module.subnets.module.utils.data.aws_regions.opted_in",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03cf12899df73af3e",
            "arn": "arn:aws:ec2:us-east-2:768954994656:elastic-ip/eipalloc-03cf12899df73af3e",
            "domain": "vpc",
            "id": "eipalloc-03cf12899df73af3e",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-216-156-19.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.156.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "nat",
              "Name": "nat-use2a",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nat-use2a",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03cf12899df73af3e",
            "association_id": "eipassoc-06fd4ae829dc21b36",
            "connectivity_type": "public",
            "id": "nat-078c557069773d6a3",
            "network_interface_id": "eni-0d5d4ddf0522f4ec3",
            "private_ip": "172.16.126.114",
            "public_ip": "18.216.156.19",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dda3b028df07b28a",
            "tags": {
              "Attributes": "nat",
              "Name": "nat-use2a",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "Attributes": "nat",
              "Name": "nat-use2a",
              "kubernetes.io/cluster/cluster": "shared"
            }
          },
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:network-acl/acl-0dd614e2e1ac09d94",
            "egress": [],
            "id": "acl-0dd614e2e1ac09d94",
            "ingress": [],
            "owner_id": "768954994656",
            "subnet_ids": [
              "subnet-09b961a7f97be61c2",
              "subnet-0bb4221453fb0113f",
              "subnet-0bc2821a848189b13"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:network-acl/acl-086980bdae0cdef74",
            "egress": [],
            "id": "acl-086980bdae0cdef74",
            "ingress": [],
            "owner_id": "768954994656",
            "subnet_ids": [
              "subnet-003058f546ebad09c",
              "subnet-0dda3b028df07b28a",
              "subnet-0dfb4dbdd156087bb"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1578800097",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0dd614e2e1ac09d94",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2358053856",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0dd614e2e1ac09d94",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1884694303",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-0dd614e2e1ac09d94",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private6_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3601242191",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-0dd614e2e1ac09d94",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3362834980",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-086980bdae0cdef74",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public4_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1729451910",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-086980bdae0cdef74",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3862724314",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-086980bdae0cdef74",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public6_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "cidr_block": "",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1027523625",
            "ipv6_cidr_block": "::/0",
            "network_acl_id": "acl-086980bdae0cdef74",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 111,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_network_acl.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4ffb7eb34e98def1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078c557069773d6a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4ffb7eb34e98def",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d54ba11dd3281cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078c557069773d6a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d54ba11dd3281cf",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0705247f4b2f0246d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078c557069773d6a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0705247f4b2f0246d",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat64",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "64:ff9b::/96",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4ffb7eb34e98def2696003898",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078c557069773d6a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4ffb7eb34e98def",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "64:ff9b::/96",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05d54ba11dd3281cf2696003898",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078c557069773d6a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d54ba11dd3281cf",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "64:ff9b::/96",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0705247f4b2f0246d2696003898",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-078c557069773d6a3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0705247f4b2f0246d",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_eip.default",
            "module.subnets.aws_eip_association.nat_instance",
            "module.subnets.aws_instance.nat_instance",
            "module.subnets.aws_nat_gateway.default",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_security_group.nat_instance",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_ami.nat_instance",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_eip.nat",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-002de28451ce0a2ec",
            "id": "r-rtb-0afed89c6aca25dca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afed89c6aca25dca",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-002de28451ce0a2ec",
            "id": "r-rtb-0afed89c6aca25dca2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0afed89c6aca25dca",
            "state": "active",
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:route-table/rtb-0e4ffb7eb34e98def",
            "id": "rtb-0e4ffb7eb34e98def",
            "owner_id": "768954994656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "private-use2a",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use2a",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:route-table/rtb-05d54ba11dd3281cf",
            "id": "rtb-05d54ba11dd3281cf",
            "owner_id": "768954994656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "private-use2b",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use2b",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:route-table/rtb-0705247f4b2f0246d",
            "id": "rtb-0705247f4b2f0246d",
            "owner_id": "768954994656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "private-use2c",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use2c",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:route-table/rtb-0afed89c6aca25dca",
            "id": "rtb-0afed89c6aca25dca",
            "owner_id": "768954994656",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de0963eebca87f43",
            "route_table_id": "rtb-0e4ffb7eb34e98def",
            "subnet_id": "subnet-0bb4221453fb0113f"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7faf4b3d75fb1c8",
            "route_table_id": "rtb-05d54ba11dd3281cf",
            "subnet_id": "subnet-09b961a7f97be61c2"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a5c07d33e508d0b",
            "route_table_id": "rtb-0705247f4b2f0246d",
            "subnet_id": "subnet-0bc2821a848189b13"
          },
          "dependencies": [
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bd8d13f4c193bbb",
            "route_table_id": "rtb-0afed89c6aca25dca",
            "subnet_id": "subnet-0dda3b028df07b28a"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c6224e7a26bfea0",
            "route_table_id": "rtb-0afed89c6aca25dca",
            "subnet_id": "subnet-003058f546ebad09c"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001b040c64c5b3d17",
            "route_table_id": "rtb-0afed89c6aca25dca",
            "subnet_id": "subnet-0dfb4dbdd156087bb"
          },
          "dependencies": [
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:subnet/subnet-0bb4221453fb0113f",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/19",
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb4221453fb0113f",
            "ipv6_cidr_block": "2600:1f16:1d0d:cd00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0ec0f50d1a533b22f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768954994656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "private-use2a",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use2a",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:subnet/subnet-09b961a7f97be61c2",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.32.0/19",
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b961a7f97be61c2",
            "ipv6_cidr_block": "2600:1f16:1d0d:cd01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-018189973e2d2ec74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768954994656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "private-use2b",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use2b",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:subnet/subnet-0bc2821a848189b13",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.64.0/19",
            "enable_dns64": true,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc2821a848189b13",
            "ipv6_cidr_block": "2600:1f16:1d0d:cd02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0a100e1f26c87cc49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "768954994656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "private-use2c",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "private-use2c",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:subnet/subnet-0dda3b028df07b28a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dda3b028df07b28a",
            "ipv6_cidr_block": "2600:1f16:1d0d:cd03::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0e1a6107def04930c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768954994656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "public-use2a",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public-use2a",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:subnet/subnet-003058f546ebad09c",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003058f546ebad09c",
            "ipv6_cidr_block": "2600:1f16:1d0d:cd04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-079ec2c4863ec3ad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768954994656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "public-use2b",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public-use2b",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:subnet/subnet-0dfb4dbdd156087bb",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfb4dbdd156087bb",
            "ipv6_cidr_block": "2600:1f16:1d0d:cd05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-00d3cf389d35184ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768954994656",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "public-use2c",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "public-use2c",
              "kubernetes.io/cluster/cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "dependencies": [
            "module.subnets.data.aws_availability_zones.default",
            "module.subnets.data.aws_vpc.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:security-group/sg-07005868c1bb80466",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07005868c1bb80466",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "768954994656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "-default",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "Name": "-default",
              "kubernetes.io/cluster/cluster": "shared"
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:internet-gateway/igw-002de28451ce0a2ec",
            "id": "igw-002de28451ce0a2ec",
            "owner_id": "768954994656",
            "tags": {
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/cluster": "shared"
            },
            "vpc_id": "vpc-01ecba21197ae2648"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:768954994656:vpc/vpc-01ecba21197ae2648",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-05e51dc578d1d3b71",
            "default_route_table_id": "rtb-0291a033a22064881",
            "default_security_group_id": "sg-07005868c1bb80466",
            "dhcp_options_id": "dopt-0ce55544c323277f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ecba21197ae2648",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0b2dd1192bc60df36",
            "ipv6_cidr_block": "2600:1f16:1d0d:cd00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0291a033a22064881",
            "owner_id": "768954994656",
            "tags": {
              "kubernetes.io/cluster/cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}